--- a/application/package.json
+++ b/application/package.json
@@ -12,11 +12,16 @@
     "sequelize": "^6.37.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "express": "4.21.2",
-    "ejs": "3.1.10"
+    "vitest": "^3.0.5"
   }
 }
