--- a/application/package.json
+++ b/application/package.json
@@ -1,6 +1,7 @@
 {
   "name": "p_gestproj426",
   "version": "1.0.0",
+  "type": "module",
   "description": "Projet pour le module 426 ()\u001b[DProgrammer avec des méthodes agiles)",
   "main": "src/app.mjs",
   "scripts": {
@@ -9,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sequelize": "^6.37.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
+    "ejs": "3.1.10",
     "express": "4.21.2",
-    "ejs": "3.1.10"
+    "nodemon": "^3.1.9"
   }
 }
