--- a/application/src/config.mjs.example
+++ b/application/src/config.mjs.example
@@ -2,8 +2,18 @@ const db_name = "";
 const db_user = "";
 const db_password = "";
 const db_host = "";
+const app_port = ;
 const db_port = ;
 const db_dialect = "mysql";
 const sequelize_log = false;
 
-export {db_name, db_user, db_password, db_host, db_port, db_dialect, sequelize_log}
+export {
+  db_name,
+  db_user,
+  db_password,
+  db_host,
+  app_port,
+  db_port,
+  db_dialect,
+  sequelize_log,
+};
