--- a/application/package.json
+++ b/application/package.json
@@ -9,15 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sequelize": "^6.37.5",
+    "bcrypt": "^5.1.1",
+    "cesium": "^1.126.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
+    "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
-
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
