--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ DB/LoopingImage.jpg
 application/src/config.mjs
 theorie/~$426-BSI01-TrunkBased.docx
 theorie/E-426-BSI01-TrunkBased.docx
+application/src/config.mjs
