--- a/application/package.json
+++ b/application/package.json
@@ -4,7 +4,8 @@
   "description": "Projet pour le module 426 ()\u001b[DProgrammer avec des méthodes agiles)",
   "main": "src/app.mjs",
   "scripts": {
-    "start": "nodemon src/app.mjs"
+    "start": "nodemon src/app.mjs",
+    "seed": "node src/seed.mjs"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +22,5 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "vitest": "^3.0.5"
-  },
-  "scripts": {
-    "seed": "node src/seed.mjs"
   }
 }
