--- a/frontend/unesco/package.json
+++ b/frontend/unesco/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "cesium": "^1.127.0",
+    "vite-plugin-cesium": "^1.2.23",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
