--- a/Application/Backend/package.json
+++ b/Application/Backend/package.json
@@ -6,7 +6,7 @@
   "main": "src/app.mjs",
   "scripts": {
     "start": "nodemon src/app.mjs",
-    "seed": "node src/seed.mjs",
+    "seed": "node src/seed.mjs"
   },
   "author": "",
   "license": "ISC",
